Dev: dcrd, dcrdata: incorporate feedback

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – August 2018
+# {DRAFT} Decred Journal – August 2019
 
 ![{alt text}](../img/{file.jpg} "{hover tooltip text}")
 
@@ -21,17 +21,15 @@
 
 New module named `blockchain/standalone` was [introduced](https://github.com/decred/dcrd/pull/1808), which aims to provide several of the standalone functions currently available in the `blockchain` module. The primary goal of offering these functions via a separate module is to reduce dependencies for client code. It will also be beneficial for applications such as lightweight clients that need to ensure basic security properties hold and calculate appropriate vote subsidies and block explorers. Opportunity was taken to write more robust and performant functions that will replace ones in the `blockchain` module in the next major version. The new module will ship with comprehensive tests, full package documentation, and basic usage examples.
 
-The gradual process of upgrading Go modules continues with new versions of [`blockchain`](https://github.com/decred/dcrd/pull/1823), [`mining`](https://github.com/decred/dcrd/pull/1831), [`connmgr`](https://github.com/decred/dcrd/pull/1833), [`peer`](https://github.com/decred/dcrd/pull/1834) and [`mempool`](https://github.com/decred/dcrd/pull/1835) being introduced to make use of previous module upgrades. The main module was also [updated](https://github.com/decred/dcrd/pull/1837) to use all of the latest major module versions.
-
-{ looks like main module was reached, does this mark the end of the module upgrading saga? if yes, any comments about the whole process (e.g. what does it allow to do)? }
+New major versions of [`blockchain`](https://github.com/decred/dcrd/pull/1823), [`mining`](https://github.com/decred/dcrd/pull/1831), [`connmgr`](https://github.com/decred/dcrd/pull/1833), [`peer`](https://github.com/decred/dcrd/pull/1834) and [`mempool`](https://github.com/decred/dcrd/pull/1835) modules have been introduced to make use of other new major module versions. The main module was also [updated](https://github.com/decred/dcrd/pull/1837) to use them all, which marks the end of module upgrading saga for now. The overall benefit is that it updates dcrd to make use of all the latest code updates and significantly reduces that amount of future churn necessary in certain modules when they require API changes that constitute a major semantic versioning break.
 
 `gcs` module received multiple [improvements](https://github.com/decred/dcrd/pulls?q=is%3Apr+is%3Aclosed+merged%3A2019-08-01..2019-08-31+gcs) to bring it to the quality level required by consensus code for ultimate inclusion in [header commitments](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Support has been [added](https://github.com/decred/dcrd/pull/1854) for independent false positive rate and Golomb coding bin size. Among other things, this permits more optimal parameters for minimizing the filter size to be specified. This capability will be used in the upcoming version 2 filters that will ultimately be included in header commitments. Start of the v2 dev cycle also marked the start of a [new approach](https://github.com/decred/dcrd/pull/1843) towards handling module versioning between release cycles to reduce the maintenance burden.
 
 The Blake256 implementation has been [copied](https://github.com/decred/dcrd/pull/1811) into the dcrd repository so that dcrd does not have that external dependency anymore. While the optimizations required by dcrd were [accepted](https://github.com/dchest/blake256/pull/3) upstream, it is still desirable to have consensus critical code under tight control of dcrd maintainers to avoid situations mentioned [here](https://github.com/decred/dcrd/issues/1810).
 
-Test coverage was increased and hardened in multiple areas of the codebase.
+Automatic [address discovery](https://github.com/decred/dcrd/pull/1522) has been merged. It allows users who are behind NAT to run publicly discoverable full nodes without specifying `--externalip`.
 
-{ is address discovery notable? what's the user benefit? https://github.com/decred/dcrd/pull/1522 }
+Test coverage was increased and hardened in multiple areas of the codebase.
 
 Work [started](https://github.com/decred/dcrd/pull/1829) to maximize block template fees based on transaction chains in the mempool.
 
@@ -82,6 +80,10 @@ LN faucet gained a form to [pay invoices](https://github.com/decred/lightning-fa
 [dcrios](https://github.com/raedahgroup/dcrios): Work is in progress on the improved UI and watch-only wallet support similar to the Android app.
 
 [dcrdata](https://github.com/decred/dcrdata): consume upgrades in dcrd, UI tweaks, optimizations and bug fixes.
+
+A big change that had been on the Todo list for a long time is [dropping SQLite](https://github.com/decred/dcrdata/pull/1480). This makes the database architecture much simpler, only requiring PostgreSQL, and makes the build cgo-free (pure Go, no C).
+
+A redesign is ramping up, but the backend development is mostly in maintenance mode now. That's mainly to focus on dcrdex. But there is plenty more to do to keep improving, especially with mixed transactions.
 
 [docs](https://github.com/decred/dcrdocs): [Added](https://github.com/decred/dcrdocs/pull/968) new page detailing [atomic swaps](https://docs.decred.org/advanced/atomic-swap/), [updated](https://github.com/decred/dcrdocs/pull/979) [hardware wallet](https://docs.decred.org/wallets/hardware-wallets/) support info, minor cleanups.
 
@@ -421,5 +423,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 * writing and editing: bee, degeri, Dustorf, richardred, s\_ben
-* reviews and feedback: jholdstock, lukebp, raedah
+* reviews and feedback: davecgh, chappjc, jholdstock, lukebp, raedah
 * title image: saender
