--- a/journal/201908.md
+++ b/journal/201908.md
@@ -420,6 +420,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-* writing and editing: {}
-* reviews and feedback: {}
-* title image: {}
+* writing and editing: bee, degeri, Dustorf, richardred, s\_ben
+* reviews and feedback: jholdstock, lukebp, raedah
+* title image: saender
