--- a/journal/201908.md
+++ b/journal/201908.md
@@ -422,6 +422,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-* writing and editing: bee, degeri, Dustorf, richardred, s\_ben
+* writing and editing: bee, cryptoleslie, degeri, Dustorf, richardred, s\_ben
 * reviews and feedback: davecgh, chappjc, jholdstock, lukebp, raedah
 * title image: saender
