--- a/journal/201908.md
+++ b/journal/201908.md
@@ -2,14 +2,19 @@
 
 ![{alt text}](../img/{file.jpg} "{hover tooltip text}")
 
-{introduction, major news of the month ordered by impact}
+Major news of August:
 
-- Privacy announcement, coverage & flow
-- Locked DCR broke 50%
-- DEX Dev is on
-- Market Makers
+* The privacy feature which Company 0 had been working on privately was [revealed](https://blog.decred.org/2019/08/28/Iterating-Privacy/), and an initial [implementation](https://github.com/decred/cspp/) was released. See Privacy section below.
+* Development of the DEX (Decred Distributed Exchange) has [commenced](https://github.com/decred/dcrdex), after a [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) led by  @chaappjc and @buck54321 for up to $230,000 in funding was approved (89% support).
+* The percentage of circulating DCR locked in PoS tickets broke [above 50%](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=jz00c7tl-k07gzdll&bin=day&axis=time) for the first time on Aug 15. This, along with the rising ticket price, indicates that the confidence of Decred holders is increasing over time, as more holders opt to time-lock their DCR to participate in governance.
+
+- Decred stakeholders [signalled](https://proposals.decred.org/proposals/30822c16533890abc6e243eb6d12264b207c3923c14af42cd9b883e71c7003cd) that they wish to fund a market maker to address liquidity issues (87% approval). Voting for the proposals from i2 Trading, Grapefruit Trading and Tantra Labs started on Sep 4 and is competitive, all 3 proposals in the {41-58}% range at time of publication. See governance section for more detail.
 
 ## Privacy
+
+Privacy announcement, coverage & flow
+
+
 
 {idea: standalone "ad-hoc" section with short overview of the concept + all links to follow up}
 
