--- a/journal/201908.md
+++ b/journal/201908.md
@@ -260,34 +260,28 @@ Ditto’s August achievements:
 Attended:
 
 * Jul 2-3 - Asia Blockchain Summit 2019 - Taipei, Taiwan. @morphymore in the Decred Jacket was there to make a presence, and to explain Decred to those who wanted to learn more about the project. _(missed in July issue)_
-
-* {dates} - [{title}]({event link}) - {city}, {country}. {recap}
-
-* Vietnam AMA Coin98 ([transcript](https://github.com/noahpierau/articles/blob/master/Decred-Vietnam-AMA.md))
-
-* Aug 28 - [Blockchain Bootcamp Australia](https://twitter.com/DecredAustralia/status/1166592295296208896) - Victoria, Australia. A presentation on blockchain governance to an audience with representatives from academia, business, legal and government sectors. Presentation and Decred was well received, leading to a number of follow up engagements.
-
-  
-
-* https://twitter.com/binance/status/1166526786525487105?s=20
-
-* https://twitter.com/Decred_ES/status/1166132690342567938?s=20
-
-* Aug 31 - [Decred KC](https://www.meetup.com/Decred-KC/) - Kansas City, USA https://twitter.com/avonschulze/status/1166026265805172737?s=20 {didn't happen?}
-
-* https://twitter.com/avonschulze/status/1166026265805172737?s=20
-
-* https://twitter.com/DecredVietnam/status/1164858336979767297?s=20 Decred Vietnam AMA
+* Aug 1 - [Altcoins and Analytics](https://www.meetup.com/Philadelphia-Technology-for-Blockchain-and-Cryptocurrency/events/rffxfryzlbcb/) - Philadelphia, USA. Organized by [@mikeghen](https://twitter.com/mikeghen/status/1156618858066788354). { did it happen, anybody heard of it? }
+* Aug 8 - [Blockchain Bajio](https://www.eventbrite.com/e/blockchain-bajio-2do-meetup-tickets-66510186759) - Leon, Mexico. @elian, @francov\_, @victorarubin and @tricubeart [presented](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156537300012257UWNLZ:decred.org) a high level overview of Decred to around 60 attendees. (photos: [1](https://twitter.com/Decred_ES/status/1159621068027551744) [2](https://twitter.com/victorarubin/status/1159898002858893313))
+* Aug 12 - [Crypto Mondays](https://www.meetup.com/Bitcoin-Argentina/events/263594472) - Buenos Aires, Argentina. First time in Espacio Bitcoin, @pablito and @camilolwi had 15 minutes to [explain](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156570958816586TKntU:decred.org) the most relevant aspects of Decred to around 40 people in the local Bitcoin community and members from other projects. ([photos](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156570965016592IkfFu:decred.org))
+* Aug 13 - [Futurist Conference](https://www.futurist19.com/) - Toronto, Canada. @michae2xl, @zubair and @ammarooni ran the booth, gave a few interviews and spoke on the panel "Blockchain Social Impact & Governance for Good". Decred was a silver sponsor. (photos: [1](https://twitter.com/Decred_CA/status/1161466609267105792) [2](https://twitter.com/Ammarooni/status/1161707860822302722) [3](https://twitter.com/Decred_CA/status/1161982417781047297) [4](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156581155118027SCAXO:decred.org))
+* Aug 16 - [Campus Party](https://brasil.campus-party.org/campus-party-natal/) - Natal, Brazil. @guisso represented Decred. ([photos](https://twitter.com/Decred_BR/status/1163473134676258816))
+* Aug 20 - Bitcoin Embassy - { city? }, Mexico. @elian was [invited](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15664995075484PTrhJ:decred.org) to the Bitcoin Embassy for an interview with El Financiero (Bloomberg affiliate in Mexico) to talk about cryptocurrencies in Mexico. (photos: [1](https://twitter.com/LOR_ena_OR/status/1164205626723098630) [2](https://twitter.com/bitcoinemb/status/1164269677381652480))
+* Aug 20 - [Crypto Alchemy: Mining and Staking Decred](https://www.meetup.com/Philadelphia-Technology-for-Blockchain-and-Cryptocurrency/events/prmvgryzlbbc/) - Philadelphia, USA. Organized by [@mikeghen](https://twitter.com/mikeghen/status/1156618858066788354). { did it happen, anybody heard of it? }
+* Aug 21 - [Decred Meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/263814807/) - Chicago, USA. { did it happen? }
+* Aug 22 - [Binance Meetup](https://www.facebook.com/events/406522099975717/) - Monterrey, Mexico. @elian and @francov\_ represented Decred. (photos: [1](https://twitter.com/binance/status/1166526786525487105) [2](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15665195371107618foQnv:matrix.org) [3](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15666946921832943HyclD:matrix.org))
+* Aug 24 - [Decred Live AMA](https://twitter.com/coin98_net/status/1164845587910414337) - web. @Haon and Việt Anh Đàm answered questions from the Vietnamese community, organized by Coin98 on their [Facebook](https://www.facebook.com/groups/Coin98.Net/) page. There was a reward of $50 in DCR for best questions. ([transcript](https://github.com/noahpierau/articles/blob/master/Decred-Vietnam-AMA.md))
+* Aug 28 - [Blockchain Bootcamp](https://www.meetup.com/blockchaincentre/events/263601014/) - Docklands, Australia. @zohand and @eSizeDave were [invited](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$156697235011245SxvJY:decred.org) by Ernst & Young to run a Decred-specific presentation on blockchain governance to an audience with representatives from academia, business, legal and government sectors. Presentation and Decred was well received, leading to a number of follow up [engagements](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156739040517633gdQNG:decred.org). ([photos](https://twitter.com/DecredAustralia/status/1166592295296208896))
+* Aug 29 - [Binance Meetup](https://twitter.com/Decred_ES/status/1166132690342567938) - Mexico City, Mexico. @elian [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156713369714381PAoax:decred.org): "we had around 60 attendees, mainly enthusiasts and entrepreneurs, there was a lot of interest in the privacy implementation of Decred and in the idea of Governance as a Service. Big thanks to @francov\_ @luisantoniocrag and @victorarubin for helping out". (photos: [1](https://twitter.com/TRADcoinMX/status/1168541349395738624) [2](https://twitter.com/interprocsys/status/1167243076726861824) [3](https://twitter.com/victorarubin/status/1167495971539836928))
 
 Upcoming:
 
-* {dates} - [{title}]({event link}) - {city}, {country}. {info}
-* Sep 26 - Decred Los Angeles - Los Angeles, USA. https://twitter.com/MattDavidKaye/status/1164974520081342464?s=20
+* Sep 16 - [Decred Special Interest Group](https://www.meetup.com/Philadelphia-Technology-for-Blockchain-and-Cryptocurrency/events/hmqlhryzmbvb/) - Philadelphia, USA. Organized by [@mikeghen](https://twitter.com/mikeghen/status/1156618858066788354). { still planned, anybody knows it? }
+* Sep 21 - [French Vibes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156537559812369yasFZ:decred.org) - Mexico City, Mexicy. Brand awareness experiment by @elian. { still planned? keep or remove this? }
+* Sep 26 - [Inaugural Decred Meetup](https://twitter.com/MattDavidKaye/status/1164974520081342464) - Los Angeles, USA. Blockhead Capital and @jy-p will talk about fundamentals behind Decred.
+* Sep 30 - Oct 1 - [Voice of Blockchain](https://twitter.com/BlockchainVoice/status/1154772731575099392) - Chicago, USA. @jy-p will present a keynote "Why Direct Sovereignty & Multi-Stakeholder Inclusive Governance Will Last".
+* Nov 4-7 - [Websummit](https://websummit.com/) - Lisbon, Portugal. { any new details? }
 
-{announcements in Events domain}
-
-Alex Von Schulze is looking for people to organize the first Decred meetup in Kansas City  https://twitter.com/avonschulze/status/1166026265805172737 
-https://www.meetup.com/Decred-KC/
+Alex Von Schulze is [looking](https://twitter.com/avonschulze/status/1166026265805172737 ) for people to organize the first Decred [meetup](https://www.meetup.com/Decred-KC/) in Kansas City, USA.
 
 ## Media
 
