--- a/journal/201908.md
+++ b/journal/201908.md
@@ -163,23 +163,15 @@ A reddit [post](https://www.reddit.com/r/decred/comments/cutc16/decred_events_me
 
 ## Network
 
-{cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
+Hashrate: August's hashrate opened at ~563 Ph/s and closed ~567 Ph/s, bottoming at 374 Ph/s and peaking at 671 Ph/s throughout the month. Pool hashrate distribution as of Sep 5:  F2Pool 23%, UUPool 16%, Poolin 16%, lab.antpool.com 4.1%, BTC.com 2.3%, Luxor 1.8%, BeePool 0.10%, Coinmine 0.10%, suprnova 0.01% and others 36% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: August's hashrate opened at ~563 Ph/s and closed ~567 Ph/s, bottoming at 374 Ph/s and peaking at 671 Ph/s throughout the month. Pool hashrate distribution as of Sep 5:  F2Pool 23.29%, UUPool 16.30%, Poolin 16.26%, lab.antpool.com 4.10%, BTC.com 2.32%, Luxor 1.76%, BeePool 0.10%, Coinmine 0.10%, suprnova 0.01% and others 35.77% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Staking: 30-day average ticket price was 130.05 DCR (+4.25) per dcrstats.com. The price varied between 119.9-134.5 DCR. Locked amount was 5.03-5.25 million DCR, which corresponded to 49.40-50.93% of the available supply.
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now}
-
-Staking: 30-day average ticket price was 130.05 DCR (+4.25) per dcrstats.com. The price varied between 121.07-134.48 DCR. Locked amount was 5.06-5.23 million DCR, which corresponded to 49.38-50.93% of the available supply.
-
-{recap of ticket price action if it was interesting}
-
-{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now}
-
-Nodes: Throughout [August](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1564610400000&to=1567288740000) there were around 140 listening nodes and 285-530 total nodes per dcr.farm. Roughly 92.13% run dcrd v1.4.0, and 7.86 are v1.5.0(pre) dev builds.
+Nodes: Throughout [August](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1564617600000&to=1567296000000) there were around 167 listening nodes and 445-530 total nodes per dcr.farm. Roughly 78% run dcrd v1.4.0, 5.7% are dcrwallet v1.4.0 and 6.2% are v1.5.0(pre) dev builds.
 
 As of Sep 5, the DCR [testnet LN](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-network?orgId=1) shows 19 nodes, 32 channels and a total capacity of 253 DCR.
 
-We also had our first [transactions](https://twitter.com/decredproject/status/1167269901293297664) that make use of the new privacy system.
+First [transactions](https://twitter.com/decredproject/status/1167269901293297664) that make use of the new privacy system have been noticed.
 
 ## Mining
 
