--- a/journal/201908.md
+++ b/journal/201908.md
@@ -183,42 +183,35 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-Much of the in-process Outreach work was pushed aside, as we focused on the release of Decred Privacy. Efforts began on August 21st, as Project Lead, Jake Yocom-Piatt published [Surveying the Privacy Landscape](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/). This work was supported via [tweet storm](https://twitter.com/decredproject/status/1164245224274767873?s=20) which generated direct engagement from Fluffy Pony, Zooko, and the Mimblewimble folks. The first details of Privacy broke when International Operations Lead, Jonathan Zeppettini, went on [Laura Shin's Unchained Podcast](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/) to talk about Decred and its new feature.
+Much of the in-process Outreach work was pushed aside, as we focused on the release of Decred Privacy. Efforts began on Aug 21, as @jy-p published [Surveying the Privacy Landscape](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/). This work was supported via [tweetstorm](https://twitter.com/decredproject/status/1164245224274767873) which generated direct engagement from fluffypony, Zooko, and the MimbleWimble folks. The first details of privacy broke when @jz went on Laura Shin's [Unchained Podcast](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/) to talk about Decred and its new feature.
 
-Twenty-four hours later, the first written news of Decred Privacy was released by The Block, in concert with the publication of Jake's article, [Iterating Privacy](https://blog.decred.org/2019/08/28/Iterating-Privacy/), which deeply explored the motivations, operational details, limitations, and next steps of Decred Privacy. This was supported with a [10-part tweet storm](https://twitter.com/decredproject/status/1166746979160023046?s=20), which garnered lots of attention and engagement. Decred's Privacy implementation has been received heavy coverage, detailed in Media, with the excpetion of Coindesk. 
+Twenty-four hours later, the first written news of Decred Privacy was released by The Block, in concert with the publication of @jy-p's article, [Iterating Privacy](https://blog.decred.org/2019/08/28/Iterating-Privacy/), which deeply explored the motivations, operational details, limitations, and next steps of Decred Privacy. This was supported with a 10-part [tweetstorm](https://twitter.com/decredproject/status/1166746979160023046), which garnered lots of attention and engagement. Decred's Privacy implementation has received heavy coverage, detailed in Media, with the exception of CoinDesk.
 
-To continue support of the Privacy release, Anshawblack released [Privacy Flow](https://twitter.com/decredproject/status/1169011789255925762?s=20), with GhostRhidah, and also a very special [Decred in Depth episode featuring Jake Yocom-Piatt](https://twitter.com/decredproject/status/1168558002867191808?s=20) just days after the release. In this episode, Jake delves deeply into the surveillance economy, why privacy matters, and the current and future states of Decred Privacy.
+To continue support of the Privacy release, @anshawblack released [Privacy Flow](https://twitter.com/decredproject/status/1169011789255925762), with GhostRhidah, and also a very special Decred in Depth [episode](https://twitter.com/decredproject/status/1168558002867191808) featuring @jy-p just days after the release. In this episode, @jy-p delves deeply into the surveillance economy, why privacy matters, and the current and future states of Decred Privacy.
 
-At the time of publication, the Ditto team continues to work on ways to keep Decred Privacy top of mind, and it seems like a timely issue with [recent news of Google wrongdoing.](https://www.ft.com/content/e3e1697e-ce57-11e9-99a4-b5ded7a7fe3f) Additionally, Dustorf will soon publish a blog entry on Medium targeting the less technical crowd.
+At the time of publication, the Ditto team continues to work on ways to keep Decred Privacy top of mind, and it seems like a timely issue with [recent news of Google wrongdoing](https://www.ft.com/content/e3e1697e-ce57-11e9-99a4-b5ded7a7fe3f). Additionally, @Dustorf will soon publish a blog entry targeting the less technical crowd.
 
-Outreach has made a concerted effort to increase engagement on twitter via quality content and education regarding Decred. This was demonstrated by project impression counts more than doubling from July to over 5.6MM. One of the messages that gained the most amount of traction was [a 4-paart tweet storm on the announcement of the DEX specs](https://twitter.com/decredproject/status/1156652694502817793?s=20)
+Outreach has made a concerted effort to increase engagement on Twitter via quality content and education regarding Decred. This was demonstrated by project impression counts more than doubling from July to over 5.6M. One of the messages that gained the most amount of traction was a 4-part [tweet storm](https://twitter.com/decredproject/status/1156652694502817793) on the announcement of the DEX spec.
 
-Decred has confirmed it's booth presence at [Websummit](https://websummit.com/), November 4-7, in Lisbon, Portugal, so please connect with us in the events_planning room in Matrix if you're interesting in helping out. We're also planning a roadshow in Asia, but don't have any details to share at the time of publication.
+Decred has confirmed it's booth presence at [Web Summit](https://websummit.com/) on Nov 4-7 in Lisbon, Portugal, so please connect with us in the #event\_planning room in Matrix if you're interesting in helping out. We're also planning a roadshow in Asia, but don't have any details to share at the time of publication.
 
 [Foundational Messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md) was updated to v2. [Changes](https://github.com/decredcommunity/pr/commit/fc407b8f037a222db22a4507e4a5ade5b746f4dd) include Pitch, Tagline and Vision expanded with Decred's principles and a FAQ. Tagline was slightly tweaked to replace "Self-Funding" with "Sustainable".
 
-Ditto’s August achievements:
+Ditto's August achievements:
 
-*   Secured 9 pieces of coverage so far on the privacy launch — a who’s-who of all the top crypto media:
-    *   The achievement of the year: Exclusive [breaking coverage on Laura Shin’s Unchained](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/) (kudos to @jz for incredible delivery) — something we’ve been working to secure for 6+ months, and it finally happened! 
-    *   [The Block](https://www.theblockcrypto.com/tiny/crypto-project-decred-adds-privacy-features-to-its-coin/ ), also mentioned in its newsletter  
-    *   [Crypto Briefing](https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/) newsletter feature and article on Privacy Rap! Kudos to @anshawblack for helping produce this gem
-    *   [Cointelegraph ](https://cointelegraph.com/news/crypto-project-decred-adds-privacy-features-to-its-coin)
-    *   [Decrypt Media](https://decrypt.co/8796/decred-aims-to-be-a-more-effective-privacy-coin-than-monero-or-zcash)
-    *   [Modern Consensus](https://modernconsensus.com/cryptocurrencies/alt-coins/decred-cryptocurrency-launches-launches-privacy-mixing-feature/)
-    *   Russian language news site [Forklog](https://forklog.com/menshe-koda-menshe-vzloma-razrabotchiki-kriptovalyuty-decred-dobavili-optsiyu-privatnosti-tranzaktsij/)
-    *   Spanish language news site [Criptonoticias](https://www.criptonoticias.com/redes-protocolos/decred-anade-privacidad-criptomoneda-dcr/)
-*   Coordinated with interested community members in aggregating the best educational resources around the Internet for Decred’s educational resources repository. Please share hidden gems here if you have them.
-*   Continued our work with various community members on engaging in a productive/educational way on Twitter. This included conducting a call with seven community members to discuss social media playbook strategies, feedback, and take questions. 
-*   Created buzz around Decred privacy with approximately 85 tweets in one 24-hour period and nearly 400 over the last week, including conversations and tweets from Chris Burniske, Justin Yashoufar (Blockhead Capital), Blockfolio, Max Bronstein (DharmaHQ), and Weiss Reports. 
-*   Coordinated tweetstorms and community outreach around privacy news.
-*   Secured 2 more additional podcast interviews slated to come out in the next few weeks. 
-*   Secured an in-depth profile of project lead Jake Yocom-Piatt in Decrypt Media
-*   Secured publication of @akin’s interview on the [Base Layer Podcast](https://podcasts.apple.com/us/podcast/base-layer/id1445373535 )
-*   Secured Crypto Briefing [article on market maker proposals](https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/) 
-*   Completed messaging refresh
-*   Wrote and submitted a proposal for @matheusd to speak at The Lightning Conference Berlin. 
-*   Secured TV interview for @zubair at the Futurist Conference Toronto
+* Secured 8 pieces of coverage so far on the privacy launch - a who's-who of all the top crypto media: Unchained Podcast, [The Block](https://www.theblockcrypto.com/tiny/crypto-project-decred-adds-privacy-features-to-its-coin/) (also mentioned in its newsletter), [Crypto Briefing](https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/) newsletter feature and article on Privacy Rap (kudos to @anshawblack for helping produce this gem), [Cointelegraph](https://cointelegraph.com/news/crypto-project-decred-adds-privacy-features-to-its-coin), [Decrypt Media](https://decrypt.co/8796/decred-aims-to-be-a-more-effective-privacy-coin-than-monero-or-zcash), [Modern Consensus](https://modernconsensus.com/cryptocurrencies/alt-coins/decred-cryptocurrency-launches-launches-privacy-mixing-feature/), Russian language news site [Forklog](https://forklog.com/menshe-koda-menshe-vzloma-razrabotchiki-kriptovalyuty-decred-dobavili-optsiyu-privatnosti-tranzaktsij/), Spanish language news site [Criptonoticias](https://www.criptonoticias.com/redes-protocolos/decred-anade-privacidad-criptomoneda-dcr/).
+* The achievement of the year: exclusive breaking coverage on Laura Shin's [Unchained](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/) (kudos to @jz for incredible delivery) - something we've been working to secure for 6+ months, and it finally happened!
+* Coordinated with interested community members in aggregating the best resources around the Internet for Decred's educational resources repository. Please share hidden gems if you have them.
+* Continued our work with various community members on engaging in a productive/educational way on Twitter. This included conducting a call with 7 community members to discuss social media playbook strategies, feedback, and take questions. 
+* Created buzz around Decred privacy with approximately 85 tweets in one 24-hour period and nearly 400 over the last week, including conversations and tweets from Chris Burniske, Justin Yashoufar (Blockhead Capital), Blockfolio, Max Bronstein (DharmaHQ), and Weiss Reports. 
+* Coordinated tweetstorms and community outreach around privacy news.
+* Secured 2 more additional podcast interviews slated to come out in the next few weeks. 
+* Secured an in-depth profile of project lead @jy-p in Decrypt Media.
+* Secured publication of @akin's interview on the [Base Layer Podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-059-akin-sawyerr-decred/).
+* Secured Crypto Briefing [article](https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/) on market maker proposals.
+* Completed [messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md) refresh.
+* Wrote and submitted a proposal for @matheusd to speak at The Lightning Conference Berlin 
+* Secured TV interview for @zubair at the Futurist Conference Toronto.
 
 ## Events
 
@@ -244,7 +237,7 @@ Upcoming:
 * Sep 21 - [French Vibes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156537559812369yasFZ:decred.org) - Mexico City, Mexicy. Brand awareness experiment by @elian. { still planned? keep or remove this? }
 * Sep 26 - [Inaugural Decred Meetup](https://twitter.com/MattDavidKaye/status/1164974520081342464) - Los Angeles, USA. Blockhead Capital and @jy-p will talk about fundamentals behind Decred.
 * Sep 30 - Oct 1 - [Voice of Blockchain](https://twitter.com/BlockchainVoice/status/1154772731575099392) - Chicago, USA. @jy-p will present a keynote "Why Direct Sovereignty & Multi-Stakeholder Inclusive Governance Will Last".
-* Nov 4-7 - [Websummit](https://websummit.com/) - Lisbon, Portugal. { any new details? }
+* Nov 4-7 - [Web Summit](https://websummit.com/) - Lisbon, Portugal. Decred will have a booth. { any new details? }
 
 Alex Von Schulze is [looking](https://twitter.com/avonschulze/status/1166026265805172737 ) for people to organize the first Decred [meetup](https://www.meetup.com/Decred-KC/) in Kansas City, USA.
 
