Media add and polish

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -243,40 +243,42 @@ Alex Von Schulze is [looking](https://twitter.com/avonschulze/status/11660262658
 
 ## Media
 
-Since April the Decred Journal has been pushing for greater decentralization of its production, this has involved writing down descriptions of how components of the Journal get made and the reasoning for making them in these ways. The idea is that by formalizing these aspects the Journal becomes less reliant on the individuals who currently contribute, and their tacit knowledge. The following documents are available, worth a look for anyone who would like to become a Journal contributor.
-
-* self-describing [template](https://github.com/xaur/decred-news/blob/docs/journal-template.md)
-* revamped [contributing](https://github.com/xaur/decred-news/blob/docs/contributing.md) page, 
-* [content plan](https://github.com/xaur/decred-news/blob/docs/content.md) with ideas for expansion
-* huge guidelines doc that captures the vision and ways of DJ is [under construction](https://github.com/xaur/decred-news/pull/91)
-
 Selected articles:
 
-* Surveying the Privacy Landscape by @jy-p ([blog.decred.org](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/))
-* Decred Q&A with @elian for Crypto Hispano ([steemit](https://steemit.com/btc/@cryptohispano01/decred-q-and-a))
 * Decred | The Power to Think for Oneself by @BlackBearXVII ([medium](https://medium.com/@imagnusholdings/decred-the-power-to-think-for-oneself-46b9aab9ff0e))
-* Decred's ambitious vision for a truly decentralized exchange by Nate Urbas ([cryptolinks](https://cryptolinks.com/news/decreds-ambitious-vision-for-a-truly-decentralized-exchange))
+* Decred Q&A with @elian for Crypto Hispano ([steemit](https://steemit.com/btc/@cryptohispano01/decred-q-and-a))
+* Decred's Ambitious Vision for a Truly Decentralized Exchange by Nate Urbas ([cryptolinks.com](https://cryptolinks.com/news/decreds-ambitious-vision-for-a-truly-decentralized-exchange))
 * Decentralized Governance in Action: Decred Debates Market Liquidity by Darren Kleine ([cryptobriefing.com]( https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/))
-* Decred project lead Jake Yocom-Piatt: Interview Profile by Matt Hussey ([Decrypt](https://decrypt.co/8801/decred-project-lead-jake-yocom-piatt-interview-profile))
-
+* Surveying the Privacy Landscape by @jy-p ([blog.decred.org](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/))
+* Decred Project Lead Jake Yocom-Piatt: Practice What You Preach by Matt Hussey ([decrypt.co](https://decrypt.co/8801/decred-project-lead-jake-yocom-piatt-interview-profile))
 
 Translations:
 
-* https://stakey.club/translated/privacy-landscape/ by {@emiliomann?}
+* Surveying the Privacy Landscape - [in Portuguese](https://stakey.club/translated/privacy-landscape/) by @mm.
+* Decred Journal July 2019 was translated to Arabic (@arij) and April-July to Spanish (@francov\_ and @luisantoniocrag). The index of all translations is maintained [here](https://xaur.github.io/decred-news/) and is updated several times a month. Thank you all for spreading DJ all over the world!
 
 Videos:
 
 * Decred's Market Maker Proposals - Crypto Governance In Action! by @Exitus ([youtube](https://www.youtube.com/watch?v=BKSMA-eanoY))
+* The Feeless Decred DEX Has Been Approved! by @Exitus ([youtube](https://www.youtube.com/watch?v=An5YCY_q894))
 * Futurist 19 interview with @ammarooni ([youtube](https://www.youtube.com/watch?v=YmQce50dfGY))
 
 Audio:
 
-* Decred in Depth Ep. 6 @jholdstock  - Jamie talks about his Decred journey, from an airdrop recipient to a part time docs contributor to his recent transition to working full-time on Decred as a developer and the reasons why that was an attractive option. ([youtube](https://www.youtube.com/watch?v=A-zcLGSYxbA))
-* Decred in Depth Ep. 7 @jy-p - Jake talks about privacy, in the general sense of surveillance capitalism and how to avoid it, why and how Company0 arrived at CoinShuffle++ as the optimal way to add privacy to Decred, and the importance of privacy to the project. ([player.fm](https://player.fm/series/decred-in-depth/jake-yocom-piatt-dcr-privacy))
+* Decred in Depth Ep. 6 with @jholdstock - Jamie talks about his Decred journey, from an airdrop recipient to a part time docs contributor to his recent transition to working full-time on Decred as a developer and the reasons why that was an attractive option. ([youtube](https://www.youtube.com/watch?v=A-zcLGSYxbA))
+* Decred in Depth Ep. 7 @jy-p - Jake talks about privacy, in the general sense of surveillance capitalism and how to avoid it, why and how Company 0 arrived at CoinShuffle++ as the optimal way to add privacy to Decred, and the importance of privacy to the project. ([player.fm](https://player.fm/series/decred-in-depth/jake-yocom-piatt-dcr-privacy))
+* Note that Decred in Depth episodes are mirrored on [SoundCloud](https://soundcloud.com/decredindepth) and [Libsyn](https://decredindepth.libsyn.com/).
 * Unchained Podcast Ep. 134 with Laura Shin - @jz gives a comprehensive intoduction to Decred and his involvement with the project, then releases initial information about Decred's new privacy option. ([unchainedpodcast.com](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/)) 
-* Inclusionism: Guest Akin Sawyer on What Money Is ([jamesfeltonkeith.com]([https://www.jamesfeltonkeith.com/radioshow/episode/c3b1bb50/inclusionism-guest-akin-sawyerr-on-what-money-is))
-* Base Layer Episode 59 - Akin Sawyer (Decred) ([spotify](https://open.spotify.com/episode/6tT4PTA572I1PAbHsZEX6N?si=s9Oa85GEQImlRSA-B3MZ5w))
+* Inclusionism: Guest Akin Sawyer on What Money Is ([jamesfeltonkeith.com](https://www.jamesfeltonkeith.com/radioshow/episode/c3b1bb50/inclusionism-guest-akin-sawyerr-on-what-money-is), [soundcloud](https://soundcloud.com/inclusionism/inclusionism-guest-akin-sawyerr-on-what-money-is))
+* Base Layer Ep. 59 - Akin Sawyer (Decred) ([podbean.com](https://acrabaselayer.podbean.com/e/base-layer-episode-059-akin-sawyerr-decred/), [spotify](https://open.spotify.com/episode/6tT4PTA572I1PAbHsZEX6N))
 * Decred Struts Privacy Credentials with Surprisingly Awesome Rap Snippet ([cryptobriefing.com](https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/))
+
+Since April the Decred Journal has been pushing for greater decentralization of its production. This has involved writing down descriptions of how components of the Journal get made and the reasoning for making them in these ways. The idea is that by formalizing these aspects the Journal becomes less reliant on the individuals who currently contribute, and their tacit knowledge. The following documents are available, worth a look for anyone who would like to become a Journal contributor:
+
+* self-describing [template](https://github.com/xaur/decred-news/blob/docs/journal-template.md) for new issues
+* revamped [contributing](https://github.com/xaur/decred-news/blob/docs/contributing.md) page
+* [content plan](https://github.com/xaur/decred-news/blob/docs/content.md) with ideas for expansion
+* huge [guidelines](https://github.com/xaur/decred-news/blob/docs/guidelines.md) doc that captures the vision and ways of DJ, and also includes tips for translators.
 
 ## Community Discussions
 
