--- a/journal/201908.md
+++ b/journal/201908.md
@@ -315,13 +315,13 @@ New Twitter account [@DCRtheSOV](https://twitter.com/DCRtheSOV) aims to [become]
 
 ## Markets
 
-In August DCR was trading between USD 22.63-32.17 / BTC 0.00275-0.00227. The average daily rate was $26.23.
+In August DCR was trading between USD 22.63-32.17 / BTC 0.00227-0.00275. The average daily rate was $26.23.
 
 A spike of unrealistic volume was [observed](https://www.reddit.com/r/decred/comments/ctm0rq/whats_with_the_new_trade_volume/) from bw.com.
 
-Bitcoin has again been oscillating around the 10,000$ mark most of August briefly hitting 12,200 USD. Many are speculating that the upcoming launch of ["Bakkt"](https://cointelegraph.com/news/bitcoin-price-will-bakkts-launch-this-month-take-btc-to-new-highs) will make bitcoin break this cycle.
+Bitcoin has again been oscillating around the $10,000 mark most of August, briefly hitting $12,200. Many are speculating that the upcoming launch of [Bakkt](https://cointelegraph.com/news/bitcoin-price-will-bakkts-launch-this-month-take-btc-to-new-highs) will make Bitcoin break this cycle.
 
-In context of discussing market maker proposals, [CoinMarketBook](https://coinmarketbook.cc/) argues "Market cap is a lie. Buy support tells the true story". As of 2019-08-19, DCR is #95 in that rating with only $260K of buy support at 10% distance from highest bid price. For context: BTC has $360M, ETH $55M, LTC $23M, XMR $9.5M, DASH $5.7M, DOGE $4.6M.
+In context of discussing market maker proposals, [CoinMarketBook](https://coinmarketbook.cc/) argues "Market cap is a lie. Buy support tells the true story". As of Aug 19, DCR was #95 in that rating with only $260K of buy support at 10% distance from highest bid price. For context: BTC has $360M, ETH $55M, LTC $23M, XMR $9.5M, DASH $5.7M, DOGE $4.6M.
 
 ## Relevant External
 
