--- a/journal/201908.md
+++ b/journal/201908.md
@@ -4,11 +4,10 @@
 
 Major news of August:
 
-* The privacy feature which Company 0 had been working on privately was [revealed](https://blog.decred.org/2019/08/28/Iterating-Privacy/), an initial [implementation](https://github.com/decred/cspp/) was released, and the first mixes were [observed](https://twitter.com/decredproject/status/1167269901293297664?s=20) on mainnet. See Privacy section below.
-* Development of the DEX (Decred Distributed Exchange) has [commenced](https://github.com/decred/dcrdex), after a [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) led by  @chaappjc and @buck54321 for up to $230,000 in funding was approved (89% support).
+* The privacy feature which Company 0 had been working on privately was [revealed](https://blog.decred.org/2019/08/28/Iterating-Privacy/), an initial [implementation](https://github.com/decred/cspp/) was released, and the first mixes were [observed](https://twitter.com/decredproject/status/1167269901293297664) on mainnet. See Privacy section below.
+* Development of the DEX (Decred Decentralized Exchange) has [commenced](https://github.com/decred/dcrdex), after a [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) led by  @chaappjc and @buck54321 for up to $230,000 in funding was approved (90% support).
 * The percentage of circulating DCR locked in PoS tickets broke [above 50%](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=jz00c7tl-k07gzdll&bin=day&axis=time) for the first time on Aug 15. This, along with the rising ticket price, indicates that the confidence of Decred holders is increasing over time, as more holders opt to time-lock their DCR to participate in governance.
-
-- Decred stakeholders [signalled](https://proposals.decred.org/proposals/30822c16533890abc6e243eb6d12264b207c3923c14af42cd9b883e71c7003cd) that they wish to fund a market maker to address liquidity issues (87% approval). Voting for the proposals from i2 Trading, Grapefruit Trading and Tantra Labs started on Sep 4 and is competitive, all 3 proposals in the {41-58}% range at time of publication. See governance section for more detail.
+* Decred stakeholders [signalled](https://proposals.decred.org/proposals/30822c16533890abc6e243eb6d12264b207c3923c14af42cd9b883e71c7003cd) that they wish to fund a market maker to address liquidity issues (87% approval). Voting for the proposals from i2 Trading, Grapefruit Trading and Tantra Labs started on Sep 4 and is competitive, all 3 proposals in the {41-58}% range at time of publication. See Governance section for more detail.
 
 ## Privacy
 
@@ -16,11 +15,11 @@ A blog [post](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape
 
 The first details of the privacy feature that Company 0 have been developing in private were released publicly by @jz on an [episode](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/) of Laura Shin's Unchained Podcast on Aug 27.
 
-On Aug 28 a blog [post](https://blog.decred.org/2019/08/28/Iterating-Privacy/) from @jy-p was published which gives a full account of the approach that Company 0 are taking to privacy, and explains the reasoning for this choice. Only approaches which would allow for pruning of spent transactions were considered, with a preference for less complex solutions that allow the auditability of DCR supply to be maintained. This tweet [thread](https://twitter.com/decredproject/status/1166746979160023046) offers a more concise introduction, and if you would prefer to hear about it in the form of a 1 minute rap, @anshawblack and Ghoistwridah have got that [covered](https://soundcloud.com/decredindepth/privacy-flow/s-5ifuN).
+On Aug 28 a blog [post](https://blog.decred.org/2019/08/28/Iterating-Privacy/) from @jy-p was published which gives a full account of the approach that Company 0 are taking to privacy, and explains the reasoning for this choice. Only approaches which would allow for pruning of spent transactions were considered, with a preference for less complex solutions that allow the auditability of DCR supply to be maintained. This tweet [thread](https://twitter.com/decredproject/status/1166746979160023046) offers a more concise introduction, and if you would prefer to hear about it in the form of a 1 minute rap, @anshawblack and GhostWridah have got that [covered](https://soundcloud.com/decredindepth/privacy-flow/s-5ifuN).
 
-The approach is based on the CoinShuffle++ protocol, integrated into the ticket buying process so that stakeholders can opt in to mix their coins as they buy tickets. It relies on a centralized server to coordinate mixing - information about input addresses and change addresses is leaked to the server but not the other peers in the mix, and output addresses are fully anonymized. As the mixing occurs off chain, no change to the consensus rules was required. As all development to this point has been funded by Company 0, no Politeia proposal for funding was required.
+The approach is based on the CoinShuffle++ protocol, integrated into the ticket buying process so that stakeholders can opt in to mix their coins as they buy tickets. The protocol addresses the traceability (who sends to whom) but does not hide amounts. The solution relies on a centralized server to coordinate mixing - information about input addresses and change addresses is leaked to the server but not the other peers in the mix, and output addresses are fully anonymized. As the mixing occurs off chain, no change to the consensus rules was required. As all development to this point has been funded by Company 0, no Politeia proposal for funding was required as well.
 
-The initial release works only for users of the Command Line Interface dcrwallet. It will take time for mixing to be integrated in Decrediton, and in order for it to be offered to VSP users significant improvements to dcrstakepool are required. Longer term, Confidential Transactions (such as Bulletproofs) will be considered. These could be used to hide the amounts, which would enhance privacy and avoid the need for extensive mixing of change from the transactions. This kind of development would require changes to the consensus rules, and so would go through the normal governance process.
+The initial release works only for users of the command-line interface dcrwallet. It will take time for mixing to be integrated in Decrediton, and in order for it to be offered to VSP users significant improvements to dcrstakepool are required. Longer term, Confidential Transactions (with Bulletproofs) will be considered. These could be used to hide the amounts, which would enhance privacy and avoid the need for extensive mixing of change from the transactions. This kind of development would require changes to the consensus rules, and so would go through the normal governance process.
 
 ## Development
 
@@ -187,7 +186,7 @@ Much of the in-process Outreach work was pushed aside, as we focused on the rele
 
 Twenty-four hours later, the first written news of Decred Privacy was released by The Block, in concert with the publication of @jy-p's article, [Iterating Privacy](https://blog.decred.org/2019/08/28/Iterating-Privacy/), which deeply explored the motivations, operational details, limitations, and next steps of Decred Privacy. This was supported with a 10-part [tweetstorm](https://twitter.com/decredproject/status/1166746979160023046), which garnered lots of attention and engagement. Decred's Privacy implementation has received heavy coverage, detailed in Media, with the exception of CoinDesk.
 
-To continue support of the Privacy release, @anshawblack released [Privacy Flow](https://twitter.com/decredproject/status/1169011789255925762), with GhostRhidah, and also a very special Decred in Depth [episode](https://twitter.com/decredproject/status/1168558002867191808) featuring @jy-p just days after the release. In this episode, @jy-p delves deeply into the surveillance economy, why privacy matters, and the current and future states of Decred Privacy.
+To continue support of the Privacy release, @anshawblack released [Privacy Flow](https://twitter.com/decredproject/status/1169011789255925762), with GhostWridah, and also a very special Decred in Depth [episode](https://twitter.com/decredproject/status/1168558002867191808) featuring @jy-p just days after the release. In this episode, @jy-p delves deeply into the surveillance economy, why privacy matters, and the current and future states of Decred Privacy.
 
 At the time of publication, the Ditto team continues to work on ways to keep Decred Privacy top of mind, and it seems like a timely issue with [recent news of Google wrongdoing](https://www.ft.com/content/e3e1697e-ce57-11e9-99a4-b5ded7a7fe3f). Additionally, @Dustorf will soon publish a blog entry targeting the less technical crowd.
 
